--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
+    "buildOnly": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
