--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.11",
+    "@types/node": "^17.0.10",
     "@vitejs/plugin-vue": "^2.0.0",
     "@wikimedia/codex": "github:wikimedia/design-codex#main",
+    "@wmde/wikibase-datamodel-types": "^0.2.0",
+    "jquery": "^3.6.0",
     "less": "^4.1.2",
     "pinia": "^2.0.6",
     "prettier": "^2.5.1",
     "sass": "^1.45.0",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
-    "vue-tsc": "^0.29.8",
+    "vue-tsc": "^0.31.1",
     "wikimedia-ui-base": "^0.19.0"
   }
 }
