--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,14 @@
     "sourceMap": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "lib": ["esnext", "dom"],
-    "types": ["vite/client"]
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/@types",
+      "./node_modules/@wikimedia/codex/packages/vue-components/dist"
+    ],
+    "types": ["vite/client", "node"]
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
