--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "format": "prettier . --write",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "vue": "^3.2.25"
+  "peer-dependencies": {
+    "vue": "3.2.23"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.11",
-    "@types/node": "^17.0.10",
+    "@types/node": "^16.11.21",
     "@vitejs/plugin-vue": "^2.0.0",
     "@wikimedia/codex": "github:wikimedia/design-codex#main",
     "@wmde/wikibase-datamodel-types": "^0.2.0",
