--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   },
   "devDependencies": {
     "@types/jquery": "^3.5.11",
+    "@types/lodash": "^4.14.178",
     "@types/node": "^16.11.21",
     "@vitejs/plugin-vue": "^2.0.0",
     "@wikimedia/codex": "github:wikimedia/design-codex#main",
     "@wmde/wikibase-datamodel-types": "^0.2.0",
     "jquery": "^3.6.0",
     "less": "^4.1.2",
+    "lodash.debounce": "^4.0.8",
     "pinia": "^2.0.6",
     "prettier": "^2.5.1",
     "sass": "^1.45.0",
