--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "lib": ["esnext", "dom"],
+    "skipLibCheck": true,
     "typeRoots": [
       "./node_modules/@types",
       "./src/@types",
