--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "postinstall": "cd node_modules/@wikimedia/codex && npm install && npm run build-all-if-missing || exit 0",
-    "buildOnly": "vite build",
+    "buildPreview": "NETLIFY=1 vite build",
     "format": "prettier . --write",
     "preview": "vite preview",
     "prepare": "husky install",
