chore: switch to published version of Codex
This makes the imports much  clearer and doesn't require a strange extra
install step that builds codex anymore.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "typeRoots": [
       "./node_modules/@types",
       "./src/@types",
-      "./node_modules/@wikimedia/codex/packages/codex/dist"
+      "./node_modules/@wikimedia/codex/dist"
     ],
     "types": ["vite/client", "node"]
   },
