--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "postinstall": "cd node_modules/@wikimedia/codex && npm install && npm run build-all-if-missing || exit 0",
     "buildPreview": "NETLIFY=1 vite build",
     "format": "prettier . --write",
     "preview": "vite preview",
@@ -24,7 +23,7 @@
     "@vitejs/plugin-vue": "^2.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
-    "@wikimedia/codex": "github:wikimedia/design-codex#main",
+    "@wikimedia/codex": "^0.1.0-alpha.4",
     "@wmde/wikibase-datamodel-types": "^0.2.0",
     "eslint": "^8.8.0",
     "eslint-plugin-prettier": "^4.0.0",
